nginx-service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-1
spec:
  selector:
    app: nginxweb1
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
