nginx-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
spec:
  selector:
    app: nginxweb2
  type: LoadBalancer
  loadBalancerIP: 10.10.10.10
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
