nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "global-ingress"  
spec:
  rules:
  - http:
      paths:
      - path: /web1
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service-1
            port: 
              number: 80
      - path: /web2
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-service-1
            port:
              number: 80
